--- a/starter-kits/tailwind/source/default/patterns/03-organisms/section/section.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/section/section.twig
@@ -55,7 +55,8 @@
     cells: cells,
     layout: layout,
     region_attributes: region_attributes,
-    gutter: gutter
+    gutter: gutter,
+    equal_height: equal_height
   }, variant) }}
 {% endset %}
 
