feat: Add initial save behavior for changed files

--- a/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.twig
@@ -24,8 +24,8 @@
 #}
 {% set attributes = attributes
   .addClass([
-    pattern_configuration('button', variant, 'defaults')['wrapper_classes'],
-    pattern_configuration('button', variant, 'wrapper_classes')[active_key],
+    pattern_configuration('button', variant, 'classes')['wrapper'],
+    pattern_configuration('button', variant, 'classes')[active_key],
     variant == 'link' ? 'px-0' : pattern_configuration('button', variant, 'size')[size]['padding'],
     pattern_configuration('button', variant, 'size')[size]['text'],
     pattern_configuration('button', variant, 'size')[size]['icon_gap'],
@@ -37,7 +37,6 @@
   .setAttribute('title', title)
   .setAttribute('disabled', disabled)
 %}
-
 {#
   Template
 #}
