feat: Improve build performance

--- a/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
@@ -39,7 +39,13 @@ Attributes
       </div>
     {% endif %}
     <div class="p-6 flex flex-1 bg-white">
-      {{ pattern('rich_snippet', {preheadline: preheadline, headline: headline, text: text, action: action}, 'small' ) }}
+      {{ pattern('rich_snippet', {
+        preheadline: preheadline,
+        headline: headline,
+        text: text,
+        action: action
+      }, 'small' ) }}
     </div>
   </{{ element }}>
 </div>
+
