--- a/examples/official-wingsuit/source/default/patterns/components/source-ws-component/source-ws-component.twig
+++ b/examples/official-wingsuit/source/default/patterns/components/source-ws-component/source-ws-component.twig
@@ -1,7 +1,9 @@
-<div>
-  Source Wingsuit story
-</div>
-<div>Settings:
-<div>setting_textfield: {{ setting_textfield }}</div>
-<div>setting_select: {{ setting_select }}</div>
+<div class="wsc-component">
+  <div>
+    DEMO Source Wingsuit story
+  </div>
+  <div>Settings:
+  <div>setting_textfield: {{ setting_textfield }}</div>
+  <div>setting_select: {{ setting_select }}</div>
+  </div>
 </div>
