--- a/starter-kits/tailwind/source/default/patterns/02-molecules/hero/hero.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/hero/hero.twig
@@ -14,21 +14,21 @@
 {#
   Attributes
 #}
-{% set cell_left_attributes = create_attribute().addClass(pattern_configuration('hero', null, 'defaults')['cell_left_classes']) %}
-{% set cell_right_attributes = create_attribute().addClass(pattern_configuration('hero', null, 'defaults')['cell_left_classes']) %}
+{% set cell_left_attributes = create_attribute().addClass(pattern_configuration('hero', null, 'classes')['cell_left']) %}
+{% set cell_right_attributes = create_attribute().addClass(pattern_configuration('hero', null, 'classes')['cell_left']) %}
 {% set gradiant_first_attributes = create_attribute().addClass([
-    pattern_configuration('hero', null, 'defaults')['gradiant_classes']['base'],
-    pattern_configuration('hero', null, 'defaults')['gradiant_classes']['first_layer'][direction_key]
+    pattern_configuration('hero', null, 'classes')['gradiant']['base'],
+    pattern_configuration('hero', null, 'classes')['gradiant']['first_layer'][direction_key]
   ] | sort | join(' ') | trim ) %}
 {% set gradiant_second_attributes = create_attribute().addClass([
-    pattern_configuration('hero', null, 'defaults')['gradiant_classes']['base'],
-    pattern_configuration('hero', null, 'defaults')['gradiant_classes']['second_layer'][direction_key]
+    pattern_configuration('hero', null, 'classes')['gradiant']['base'],
+    pattern_configuration('hero', null, 'classes')['gradiant']['second_layer'][direction_key]
   ] | sort | join(' ') | trim ) %}
 {% set gradiant_third_attributes = create_attribute().addClass([
-  pattern_configuration('hero', null, 'defaults')['gradiant_classes']['base'],
-  pattern_configuration('hero', null, 'defaults')['gradiant_classes']['third_layer'][direction_key]
+  pattern_configuration('hero', null, 'classes')['gradiant']['base'],
+  pattern_configuration('hero', null, 'classes')['gradiant']['third_layer'][direction_key]
 ] | sort | join(' ') | trim ) %}
-{% set image_attributes = create_attribute().addClass(pattern_configuration('hero', null, 'defaults')['image_classes']) %}
+{% set image_attributes = create_attribute().addClass(pattern_configuration('hero', null, 'classes')['image']) %}
 
 {#
   TEMPLATE
