fix: Fix e2e scss tests

--- a/starter-kits/vanilla-scss/source/default/tokens/_custom.scss
+++ b/starter-kits/vanilla-scss/source/default/tokens/_custom.scss
@@ -11,7 +11,7 @@ $h6-font-size: 1rem;
 $headings-font-family: '';
 $font-family-base: '';
 
-$theme-colors: ('primary': '#84CC16', 'secondary': '#8B5CF6');
+$theme-colors: ('primary': #84CC16, 'secondary': #8B5CF6);
 
 $spacer: 1rem !default;
 $spacers: () !default;
