fix: General components fix.

--- a/starter-kits/tailwind/source/default/patterns/03-organisms/header/header.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/header/header.twig
@@ -40,3 +40,15 @@
     {% endblock %}
   {% endembed %}
 </header>
+{% embed "@organisms/container/container.twig" with {
+  breadcrumb: breadcrumb,
+  padding_top: 'none',
+  padding_bottom: 'none',
+} only%}
+  {% block content %}
+    <div class="py">
+      {{ breadcrumb }}
+    </div>
+  {% endblock %}
+{% endembed %}
+
