--- a/starter-kits/tailwind/apps/drupal/templates/layout/page.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/layout/page.html.twig
@@ -46,13 +46,18 @@
  */
 #}
 {% set content %}
-  {% block main %}{{ page.content }}{% endblock %}
+  {% block main %}
+    {{ full_top }}
+    {{ page.content }}
+    {{ full_bottom }}
+  {% endblock %}
 {% endset %}
 
 {{ page.tabs }}
 
 {% embed "@templates/site-container.twig" with {
   primary_menu: page.primary_menu,
+  breadcrumb: page.breadcrumb,
   language_select: page.language_switcher,
   footer_menu: page.footer_menu,
   highlighted: page.highlighted
