--- a/starter-kits/tailwind/source/default/patterns/02-molecules/avatar/avatar.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/avatar/avatar.twig
@@ -15,11 +15,11 @@ Internal Logic
 {#
   Attributes
 #}
-{% set attributes = attributes.addClass(pattern_configuration('avatar', null, 'defaults')['wrapper_classes']) %}
-{% set image_attributes = create_attribute().addClass(pattern_configuration('avatar', null, 'defaults')['image_classes']) %}
-{% set content_wrapper_attributes = create_attribute().addClass(pattern_configuration('avatar', null, 'defaults')['content_wrapper_classes']) %}
-{% set name_attributes = create_attribute().addClass(pattern_configuration('avatar', null, 'defaults')['name_classes']) %}
-{% set title_attributes = create_attribute().addClass(pattern_configuration('avatar', null, 'defaults')['title_classes']) %}
+{% set attributes = attributes.addClass(pattern_configuration('avatar', null, 'classes')['wrapper']) %}
+{% set image_attributes = create_attribute().addClass(pattern_configuration('avatar', null, 'classes')['image']) %}
+{% set content_wrapper_attributes = create_attribute().addClass(pattern_configuration('avatar', null, 'classes')['content_wrapper']) %}
+{% set name_attributes = create_attribute().addClass(pattern_configuration('avatar', null, 'classes')['name']) %}
+{% set title_attributes = create_attribute().addClass(pattern_configuration('avatar', null, 'classes')['title']) %}
 
 {#
   Template
