--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu-primary.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/menu-primary.twig
@@ -15,7 +15,7 @@
   ] | sort | join(' ') | trim ) %}
 
   <div class="{{ container_classes }}"
-       :class="{'block lg:hidden': submenuIsOpen, 'hidden': !submenuIsOpen, {% if menu_level > 1 %} 'lg:left-full': submenuDirection == 'right', 'lg:right-full': submenuDirection == 'left' {% endif %} }"
+       :class="{'block': submenuIsOpen, 'hidden lg:hover:block': !submenuIsOpen, {% if menu_level > 1 %} 'lg:left-full': submenuDirection == 'right', 'lg:right-full': submenuDirection == 'left' {% endif %} }"
        data-menu="submenu">
     <div {{ menu_level == 2 ? 'class="lg:flex"' }}>
       {% set row_numbers = items|length/2 %}
