--- a/starter-kits/tailwind/source/default/patterns/04-templates/site-container.twig
+++ b/starter-kits/tailwind/source/default/patterns/04-templates/site-container.twig
@@ -3,6 +3,7 @@
 {% block header %}
   {% include '@organisms/header/header.twig' with {
     menu: primary_menu,
+    breadcrumb: breadcrumb,
     has_spacer: header_has_spacer,
     variant: "sticky",
     language_select: language_select
