fix: Search bar and header fix.

--- a/starter-kits/tailwind/source/default/patterns/00-forms/input/input.twig
+++ b/starter-kits/tailwind/source/default/patterns/00-forms/input/input.twig
@@ -25,6 +25,7 @@ Attributes
 {% set attributes = attributes.addClass([
   pattern_configuration('form_input', variant, 'classes')['wrapper'],
   pattern_configuration('form_input', variant, 'classes')['radius'],
+  pattern_configuration('form_input', variant, 'search_classes'),
   has_size == false ? 'w-full',
 ]) %}
 
