--- a/starter-kits/tailwind/apps/drupal/templates/layout/page.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/layout/page.html.twig
@@ -57,6 +57,7 @@
 
 {% embed "@templates/site-container.twig" with {
   primary_menu: page.primary_menu,
+  search_bar: page.search_bar,
   breadcrumb: page.breadcrumb,
   language_select: page.language_switcher,
   footer_menu: page.footer_menu,
