fix: Hero and avatar buttons fix.

--- a/starter-kits/tailwind/source/default/patterns/02-molecules/avatar/avatar.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/avatar/avatar.twig
@@ -42,7 +42,6 @@ Internal Logic
       </figcaption>
     </div>
     <div>
-      {{ button }}
-    </div>
+      {{ pattern('button', {text: 'Say hi!', size: 'medium' }, 'outline' ) }}    </div>
   </div>
 </{{ element }}>
