fix: Forms style fix.

--- a/starter-kits/tailwind/apps/drupal/templates/form/fieldset.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/form/fieldset.html.twig
@@ -20,4 +20,4 @@
  * @see template_preprocess_fieldset()
  */
 #}
-{% include "@atoms/forms/_fieldset.twig" %}
+{% include "@forms/element/fieldset.twig" %}
