--- a/starter-kits/tailwind/apps/drupal/templates/form/input--radio.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/form/input--radio.html.twig
@@ -1,15 +1,13 @@
 {#
 /**
  * @file
- * Default theme implementation for an 'input' #type form element.
+ * Theme override for an 'input' #type form element.
  *
  * Available variables:
  * - attributes: A list of HTML attributes for the input element.
  * - children: Optional additional rendered elements.
  *
  * @see template_preprocess_input()
- *
- * @ingroup themeable
  */
 #}
-{{ pattern('form_input', {attributes: attributes, children: children}, 'tel' ) }}
+{{ pattern('form_radio', {attributes: attributes, children: children}) }}
