--- a/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
@@ -42,6 +42,7 @@ Attributes
       {{ pattern('rich_snippet', {
         preheadline: preheadline,
         headline: headline,
+        headline_tag: 'h3',
         text: text,
         action: action
       }, 'small' ) }}
