--- a/packages/cli/src/generators/component/templates/ds/wingsuit/pattern.wingsuit.yml.ejs
+++ b/packages/cli/src/generators/component/templates/ds/wingsuit/pattern.wingsuit.yml.ejs
@@ -27,6 +27,9 @@
     <%= setting.name %>:
       type: <%= setting.type %>
       label: <%= setting.label %>
+<% if (setting.default) { -%>
+      default: '<%= setting.default %>'
+<% } -%>
 <% }); -%>
 <% } -%>
 <% if (useJs || useCss) { -%>
